# verify-object

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  ros_entrypoint_noetic.sh
data/models/: models_info.json  objects.yaml
launch/: verify_object.launch
src/: README.md  main_3d-dat.py  node.py  pose_refiner.py  pose_verifier.py  start_container.sh  test_config.py
src/collision/: environment.py  plane_detector.py  point_clouds_utils.py  transformations.py
src/config/: config.py  optimization_config.py  silhouette_contact.yml  silhouette_plane.yml  simple_configuration.py
src/contour/: __init__.py  contour.py
src/mask/: augmentation.py
src/pose/: model.py  object_pose.py  renderer.py
src/tracebot_msgs/: CMakeLists.txt
src/tracebot_msgs/action/: LocateObject.action  VerifyObject.action
src/utility/: logger.py  visualization.py
